2005-08-07  Andras Varga

	* cppgenerator.cc: don't look for module type if module vector size 
	is zero.

2005-07-06 Andras Varga

	* ned.dtd, ned.y, etc: added support for message declarations in msg 
	files (message-decl element, MessageDeclNode class)
	
2005-03-31  ------ omnetpp-3.1 released ------

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-06  Andras Varga

	* ned.y: negative int or real constants were parsed as -1*x, which 
	caused problems for input() with negative default values

	* cppexprgenerator.cc/h: generate inline expression (not expression 
	class) for const parameters

	* cppexprgenerator.cc/h: fixed handling of index, sizeof(), input()

2004-11-29  Andras Varga

	* ned.y: malloc.h changed to stdlib.h. Change needed for Mac OS/X 
	[patch from Michael Tuexen]

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-02  Andras Varga
	
	* Makefile.in/vc, nedgrammar.h: prefix ned parser symbols with "nedyy"
	(-p nedyy and -Pnedyy options to bison and flex) to avoid conflicts 
	with parsers in other libraries. [Akaroa was reported by Ana Cristina 
	Aguiar, TU Berlin]

2004-10-25  Andras Varga
	
	* cppgenerator.cc: updated for fullPath() signature change (see 
	include/ChangeLog)

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-13  Andras Varga

        * saxparser_libxml.cc: if document has DOCTYPE, validate document 
        and complete attrs from DTD.

        * saxparser_expat.cc: error message if document has DOCTYPE declared,
        because we cannot validate it with Expat, nor complete default attrs
        from DTD

2004-07-27  Andras Varga

        * ned.lex: fixed "`yytext_ptr' undeclared" error with some flex 
        versions

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-20  Andras Varga

        * ned.dtd, ned.y: added source-code attribute to ned-file element,